fix: corrigir z-index do gradiente e js do slider

--- a/assets/styles/scss/user-simpleslider-style.scss
+++ b/assets/styles/scss/user-simpleslider-style.scss
@@ -75,7 +75,7 @@
 				width: 100%;
 				height: 100%;
 				//background: linear-gradient(to right, transparentize(black, 0.15), transparent);
-				z-index: 1;
+				z-index: 2;
 				transition: opacity 1s ease-out;
 				opacity: 0;
 				
